--- a/pages/academico/grupos--editar.html
+++ b/pages/academico/grupos--editar.html
@@ -231,7 +231,7 @@
                     <ol class="breadcrumb clearfix">
                         <li><a href="#">Acadêmico</a></li>
                         <li class="ml-xs mr-xs"> /</li>
-                        <li class="active">Grupo</li>
+                        <li class="active">Grupos</li>
                         <li style="float:right;">
                             <button class="btn btn-inline btn-secondary-outline btn-sm">
                                 <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda
