--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -296,7 +296,7 @@
                                                         </div>
                                                         <div class="row divider-top">
                                                             <div class="col-sm-4">
-                                                                <label class="form-label semibold" for="">Material Didático a definir</label>
+                                                                <label class="form-label semibold" for="">Material didático a definir</label>
                                                                 <div class="form-group">
                                                                     <div class="btn-group btn-group-sm" data-toggle="buttons">
                                                                         <label class="btn btn-secondary-outline active">
@@ -1132,7 +1132,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <div class="checkbox-bird ml-lg">
+                                                    <div class="checkbox-bird ml-lg mt-sm">
                                                         <input type="checkbox" id="check-modal-02"/>
                                                         <label for="check-modal-02"></label>
                                                     </div>
@@ -1143,7 +1143,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <div class="checkbox-bird ml-lg">
+                                                    <div class="checkbox-bird ml-lg mt-sm">
                                                         <input type="checkbox" id="check-modal-03"/>
                                                         <label for="check-modal-03"></label>
                                                     </div>
