correção dos telefones

--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -466,11 +466,11 @@
                                                                         <ul class="chart-legend-list">
                                                                             <li>
                                                                                 <div class="dot blue"></div>
-                                                                                (00) 0000-0000 - Principal
+                                                                                (00) 00000000 - Principal
                                                                             </li>
                                                                             <li>
                                                                                 <div class="dot blue"></div>
-                                                                                (00) 0000-0000 - Outros
+                                                                                (00) 00000000 - Outros
                                                                             </li>
                                                                         </ul>
                                                                     </td>
