--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -785,11 +785,11 @@
                                                                         <ul class="chart-legend-list">
                                                                             <li>
                                                                                 <div class="dot blue"></div>
-                                                                                (00) 0000-0000 - Principal
+                                                                                (00) 00000000 - Principal
                                                                             </li>
                                                                             <li>
                                                                                 <div class="dot blue"></div>
-                                                                                (00) 0000-0000 - Outros
+                                                                                (00) 00000000 - Outros
                                                                             </li>
                                                                         </ul>
                                                                     </td>
@@ -1038,7 +1038,7 @@
                                     </div>
                                     <div class="col-sm-3">
                                         <label class="form-label semibold" for="">CEP</label>
-                                        <p>00000-000</p>
+                                        <p>00000000</p>
                                     </div>
                                 </div>
                             </div>
