Ajustes no textarea counter

--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -863,9 +863,9 @@
                             <div class="col-sm-12">
                                 <label class="form-label semibold" for="">Observações</label>
                                 <textarea rows="4" class="form-control" placeholder="Observações" id="posto-observacao"></textarea>
-                                <p>Você tem
+                                <small>Você tem
                                     <span id="posto-observacao-counter" class="counter-value semibold"></span> caracteres restantes.
-                                </p>
+                                </small>
                             </div>
                         </div>
                         <div class="row mt-md">
