--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -826,6 +826,7 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
         <script src="../../js/lib/jquery-simply-countable/jquery.simplyCountable.js"></script>
@@ -842,6 +843,7 @@
         <script src="../../js/lib/notie/notie.js"></script>
         <script src="../../js/lib/notie/notie-init.js"></script>
 
+        <script src="../../js/interface.js"></script>
         <script src="js/cursos-editar-scripts.js"></script>
     </body>
 </html>
