--- a/pages/academico/niveis--editar.html
+++ b/pages/academico/niveis--editar.html
@@ -482,10 +482,6 @@
                                         <thead>
                                             <tr>
                                                 <th>
-                                                    <div class="checkbox-bird ml-lg mb-0">
-                                                        <input type="checkbox" id="check-modal-01"/>
-                                                        <label for="check-modal-01"></label>
-                                                    </div>
                                                 </th>
                                                 <th>Material didático</th>
                                             </tr>
@@ -532,13 +528,14 @@
         <script src="../../js/lib/bootstrap/bootstrap.min.js"></script>
 
         <script src="../../js/lib/datatables-net/datatables.min.js"></script>
-        <script src="../../js/start-datatables.js"></script>
+        <script src="js/start-datatables-niveis.js"></script>
 
 
         <script src="../../js/plugins.js"></script>
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
 
         <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
         <script src="../../js/lib/notie/notie.js"></script>
@@ -548,6 +545,8 @@
         <script src="../../js/lib/jquery-validate/jquery.validate.js"></script>
 
         <script src="../../js/app.js"></script>
+
+        <script src="../../js/interface.js"></script>
 
         <script src="js/nivel-scripts.js"></script>
 
