--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -1061,6 +1061,7 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
         <script src="../../js/lib/jquery-simply-countable/jquery.simplyCountable.js"></script>
@@ -1072,6 +1073,7 @@
         <script src="../../js/app.js"></script>
 
         <script src="../../js/start-datatables.js"></script>
+        <script src="../../js/interface.js"></script>
         <script src="js/cursos-scripts.js"></script>
 
     </body>
