--- a/pages/academico/grupos--editar.html
+++ b/pages/academico/grupos--editar.html
@@ -343,6 +343,7 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
 
         <script src="../../js/custom-jquery.validation.js"></script>
 
@@ -354,6 +355,8 @@
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
 
         <script src="../../js/lib/jquery-simply-countable/jquery.simplyCountable.js"></script>
+
+        <script src="../../js/interface.js"></script>
 
         <script src="js/grupos-scripts.js"></script>
 
