--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -570,6 +570,7 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
 
         <script src="../../js/lib/notie/notie.js"></script>
 
@@ -580,6 +581,8 @@
         <script src="../../js/lib/jquery-simply-countable/jquery.simplyCountable.js"></script>
 
         <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
+
+        <script src="../../js/interface.js"></script>
 
         <script src="js/grupos-scripts.js"></script>
 
