--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -1121,10 +1121,6 @@
                                         <thead>
                                             <tr>
                                                 <th>
-                                                    <div class="checkbox-bird ml-lg mb-0">
-                                                        <input type="checkbox" id="check-modal-01"/>
-                                                        <label for="check-modal-01"></label>
-                                                    </div>
                                                 </th>
                                                 <th>Material didático</th>
                                             </tr>
@@ -1171,18 +1167,23 @@
         <script src="../../js/lib/bootstrap/bootstrap.min.js"></script>
 
         <script src="../../js/lib/datatables-net/datatables.min.js"></script>
-        <script src="../../js/start-datatables2.js"></script>
+
 
         <script src="../../js/plugins.js"></script>
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
 
         <script src="../../js/lib/jquery-validate/jquery.validate.js"></script>
 
         <script src="../../js/app.js"></script>
+
+        <script src="js/start-datatables-niveis.js"></script>
+
+        <script src="../../js/interface.js"></script>
 
         <script src="js/nivel-scripts.js"></script>
 
