--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -643,6 +643,8 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
+
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
         <script src="../../js/lib/jquery-simply-countable/jquery.simplyCountable.js"></script>
@@ -652,6 +654,9 @@
         <script src="../../js/lib/notie/notie-init.js"></script>
 
         <script src="../../js/app.js"></script>
+
+        <script src="../../js/interface.js"></script>
+
         <script src="js/posto-scripts.js"></script>
 
     </body>
