--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -1163,6 +1163,8 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
+
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
 
@@ -1172,6 +1174,8 @@
 
         <script src="../../js/app.js"></script>
         <script src="../../js/plugins.js"></script>
+
+        <script src="../../js/interface.js"></script>
 
         <script src="js/posto-scripts.js"></script>
 
