--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -502,6 +502,7 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
 
@@ -511,6 +512,8 @@
         <script src="../../js/lib/notie/notie-init.js"></script>
 
         <script src="../../js/lib/jquery-validate/jquery.validate.js"></script>
+
+        <script src="../../js/interface.js"></script>
 
         <script src="js/unidade-scripts.js"></script>
 
