--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -848,12 +848,16 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
+
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
 
         <script src="../../js/lib/jquery-validate/jquery.validate.js"></script>
 
         <script src="../../js/app.js"></script>
+
+        <script src="../../js/interface.js"></script>
 
         <script src="js/unidade-scripts.js"></script>
 
