--- a/pages/servicos/servicos--editar.html
+++ b/pages/servicos/servicos--editar.html
@@ -470,6 +470,8 @@
 
         <script src="../../js/lib/bootstrap-select/bootstrap-select.min.js"></script>
         <script src="../../js/lib/select2/select2.full.min.js"></script>
+        <script src="../../js/lib/select2/i18n/pt-BR.js"></script>
+
 
         <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
         <script src="../../js/lib/jquery-simply-countable/jquery.simplyCountable.js"></script>
@@ -479,6 +481,8 @@
         <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
 
         <script src="../../js/app.js"></script>
+
+        <script src="../../js/interface.js"></script>
 
         <script src="js/servicos-scripts.js"></script>
 
