Ajustes em cursos

--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -274,7 +274,7 @@
                                                             <div class="col-sm-6">
                                                                 <fieldset class="form-group mb-0">
                                                                     <label class="form-label semibold" for="">Quantidade de unidades avaliativas</label>
-                                                                    <input type="text" class="form-control" id="" placeholder="000">
+                                                                    <input id="qtdunav-busca" type="text" class="form-control" placeholder="000">
                                                                 </fieldset>
                                                             </div>
                                                             <div class="col-sm-6">
