Ajustes nas tabelas

--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -400,7 +400,7 @@
                                                     <div class="tbl-row">
                                                         <div class="tbl-cell tbl-cell-title">
                                                             <h5 class="semibold">
-                                                                <i class="fa fa-phone mr-xs" aria-hidden="true"></i> Lista de contatos
+                                                                <i class="fa fa-fax mr-xs" aria-hidden="true"></i> Lista de contatos
                                                             </h5>
                                                         </div>
                                                         <div class="tbl-cell tbl-cell-action-bordered">
@@ -414,14 +414,14 @@
                                                 </header>
                                                 <div class="p-0">
                                                     <div class="table-responsive">
-                                                        <table class="table table-hover table-box-typical">
+                                                        <table class="table-hover table-box-typical tbl-typical">
                                                             <thead>
                                                                 <tr>
-                                                                    <th class="text-center">Nome</th>
-                                                                    <th class="text-center">E-mail(s)</th>
-                                                                    <th class="text-center">Telefone(s)</th>
-                                                                    <th class="text-center">Observações</th>
-                                                                    <th class="text-center">Ações</th>
+                                                                    <th class="text-center"><div>Nome</div></th>
+                                                                    <th class="text-center"><div>E-mail(s)</div></th>
+                                                                    <th class="text-center"><div>Telefone(s)</div></th>
+                                                                    <th class="text-center"><div>Observações</div></th>
+                                                                    <th class="text-center"><div>Ações</div></th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
