--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -338,7 +338,7 @@
                                     <div class="row mt-md">
                                         <div class="col-sm-12">
                                             <div class="table-responsive table-custom">
-                                                <table class="datatable-on table table-hover" cellspacing="0" width="100%">
+                                                <table class="datatable-on table table-hover">
                                                     <thead>
                                                         <tr>
                                                             <th>Unidade</th>
@@ -627,11 +627,11 @@
                                                             </div>
                                                         </div>
                                                         <div class="table-responsive">
-                                                            <table class="table table-hover table-box-typical text-center">
+                                                            <table class="table-hover table-box-typical tbl-typical">
                                                                 <thead>
                                                                     <tr>
-                                                                        <th class="text-center">Tipo</th>
-                                                                        <th class="text-center">Telefone</th>
+                                                                        <th class="text-center"><div>Tipo</div></th>
+                                                                        <th class="text-center"><div>Telefone</div></th>
                                                                         <th class="text-center"></th>
                                                                     </tr>
                                                                 </thead>
@@ -643,7 +643,7 @@
                                                                             (00) 00000000
                                                                         </td>
                                                                         <td class="text-center">
-                                                                            <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                            <button type="button" class="btn btn-inline btn-danger-outline btn-sm" data-toggle="tooltip" data-placement="top" title="remover">
                                                                                 <i class="fa fa-times mr-xs" aria-hidden="true"></i>
                                                                             </button>
                                                                         </td>
@@ -794,11 +794,11 @@
                                     </header>
                                     <div class="p-0">
                                         <div class="table-responsive">
-                                            <table class="table table-hover table-box-typical text-center">
+                                            <table class="table-hover table-box-typical text-center tbl-typical">
                                                 <thead>
                                                     <tr>
-                                                        <th class="text-center">Tipo</th>
-                                                        <th class="text-center">Telefone</th>
+                                                        <th class="text-center"><div>Tipo</div></th>
+                                                        <th class="text-center"><div>Telefone</div></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
