--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -719,7 +719,7 @@
                                                     <div class="tbl-row">
                                                         <div class="tbl-cell tbl-cell-title">
                                                             <h5 class="semibold">
-                                                                <i class="fa fa-phone mr-xs" aria-hidden="true"></i> Lista de contatos
+                                                                <i class="fa fa-fax mr-xs" aria-hidden="true"></i> Lista de contatos
                                                             </h5>
                                                         </div>
                                                         <div class="tbl-cell tbl-cell-action-bordered">
@@ -733,14 +733,14 @@
                                                 </header>
                                                 <div class="p-0">
                                                     <div class="table-responsive">
-                                                        <table class="table table-hover table-box-typical">
+                                                        <table class="table-hover table-box-typical tbl-typical">
                                                             <thead>
                                                                 <tr>
-                                                                    <th class="text-center">Nome</th>
-                                                                    <th class="text-center">E-mail(s)</th>
-                                                                    <th class="text-center">Telefone(s)</th>
-                                                                    <th class="text-center">Observações</th>
-                                                                    <th class="text-center">Ações</th>
+                                                                    <th class="text-center"><div>Nome</div></th>
+                                                                    <th class="text-center"><div>E-mail(s)</div></th>
+                                                                    <th class="text-center"><div>Telefone(s)</div></th>
+                                                                    <th class="text-center"><div>Observações</div></th>
+                                                                    <th class="text-center"><div>Ações</div></th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
@@ -915,11 +915,11 @@
                                             </div>
                                         </div>
                                         <div class="table-responsive">
-                                            <table class="table table-hover table-box-typical text-center">
+                                            <table class="table-hover table-box-typical text-center tbl-typical">
                                                 <thead>
                                                     <tr>
-                                                        <th class="text-center">Tipo</th>
-                                                        <th class="text-center">Telefone</th>
+                                                        <th class="text-center"><div>Tipo</div></th>
+                                                        <th class="text-center"><div>Telefone</div></th>
                                                         <th class="text-center"></th>
                                                     </tr>
                                                 </thead>
@@ -1075,20 +1075,20 @@
                                         <div class="tbl-row">
                                             <div class="tbl-cell tbl-cell-title">
                                                 <h5 class="semibold">
-                                                    <i class="fa fa-phone mr-xs" aria-hidden="true"></i> Lista de contatos
+                                                    <i class="fa fa-fax mr-xs" aria-hidden="true"></i> Lista de contatos
                                                 </h5>
                                             </div>
                                         </div>
                                     </header>
                                     <div class="p-0">
                                         <div class="table-responsive">
-                                            <table class="table table-hover table-box-typical">
+                                            <table class="table-hover table-box-typical tbl-typical">
                                                 <thead>
                                                     <tr>
-                                                        <th class="text-center">Nome</th>
-                                                        <th class="text-center">E-mail(s)</th>
-                                                        <th class="text-center">Telefone(s)</th>
-                                                        <th class="text-center">Observações</th>
+                                                        <th class="text-center"><div>Nome</div></th>
+                                                        <th class="text-center"><div>E-mail(s)</div></th>
+                                                        <th class="text-center"><div>Telefone(s)</div></th>
+                                                        <th class="text-center"><div>Observações</div></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
