--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -439,11 +439,11 @@
                                                             </div>
                                                         </div>
                                                         <div class="table-responsive">
-                                                            <table class="table table-hover table-box-typical text-center">
+                                                            <table class="table-hover table-box-typical text-center tbl-typical">
                                                                 <thead>
                                                                     <tr>
-                                                                        <th class="text-center">Tipo</th>
-                                                                        <th class="text-center">Telefone</th>
+                                                                        <th class="text-center"><div>Tipo</div></th>
+                                                                        <th class="text-center"><div>Telefone</div></th>
                                                                         <th class="text-center"></th>
                                                                     </tr>
                                                                 </thead>
@@ -455,7 +455,7 @@
                                                                             (00) 00000000
                                                                         </td>
                                                                         <td class="text-center">
-                                                                            <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                            <button type="button" class="btn btn-inline btn-danger-outline btn-sm" data-toggle="tooltip" data-placement="top" title="remover">
                                                                                 <i class="fa fa-times mr-xs" aria-hidden="true"></i>
                                                                             </button>
                                                                         </td>
