--- a/pages/academico/grupos--editar.html
+++ b/pages/academico/grupos--editar.html
@@ -265,7 +265,7 @@
                                             <a class="nav-link active" href="#tabs-grupos-tab-3" role="tab" data-toggle="tab">
 									<span class="nav-link-in">
 										<i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                        Editar grupo
+                                        Editar grupo de curso
 									</span> </a>
                                         </li>
                                     </ul>
