--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -450,7 +450,7 @@
                                 <section role="tabpanel" class="tab-pane fade" id="tabs-grupos-tab-2">
                                     <div class="row mt-sm">
                                         <div class="col-sm-12">
-                                            <h4 class="semibold"> Cadastrar novo grupo</h4>
+                                            <h4 class="semibold">Cadastrar novo grupo de curso</h4>
                                             <small>Campos com asterisco vermelho (
                                                 <span class="semibold text-danger">*</span> ) são obrigatórios
                                             </small>
