--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -973,7 +973,7 @@
                                                                                 <img src="../../img/cursos/junior/junior-001.jpg" class="img-circle-xs"> Teens 1: Time Zones 1A - (Combo Split) + Activity Pack Teens 1 – Cengage Learning
                                                                             </p></td>
                                                                             <td class="text-right">
-                                                                                <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                                <button type="button" class="btn btn-inline btn-danger-outline btn-xs" data-toggle="tooltip" data-placement="top" title="remover">
                                                                                     <i class="fa fa-times mr-xs" aria-hidden="true"></i>
                                                                                 </button>
                                                                             </td>
@@ -983,7 +983,7 @@
                                                                                 <img src="../../img/cursos/kids/hooray-a1.jpg" class="img-circle-xs"> Hooray! A – Student’s Book – Helbling Languages
                                                                             </p></td>
                                                                             <td class="text-right">
-                                                                                <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                                <button type="button" class="btn btn-inline btn-danger-outline btn-xs" data-toggle="tooltip" data-placement="top" title="remover">
                                                                                     <i class="fa fa-times mr-xs" aria-hidden="true"></i>
                                                                                 </button>
                                                                             </td>
@@ -1052,7 +1052,7 @@
                                     </div>
                                 </div>
                                 <div class="row mt-md">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-4">
                                         <label class="form-label semibold">Quantidade de unidades avaliativas</label>
                                         <p>0000</p>
                                     </div>
@@ -1095,6 +1095,7 @@
                         </section>
                     </div>
                     <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary-outline" data-dismiss="modal"><i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i>Editar</button>
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
                     </div>
                 </div>
