--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -298,7 +298,7 @@
                                                                     </label> <label class="btn btn-secondary-outline">
                                                                     <input type="radio" name="options" id="" autocomplete="off"> Sim
                                                                 </label> <label class="btn btn-secondary-outline">
-                                                                    <input type="radio" name="options" id="" autocomplete="off"> Nãoativo
+                                                                    <input type="radio" name="options" id="" autocomplete="off"> Não
                                                                 </label>
                                                                 </div>
                                                             </div>
