--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -631,17 +631,29 @@
                                                             </div>
                                                         </div>
                                                     </header>
-                                                    <div class="card-block">
+                                                    <div class="p-0">
                                                         <div class="table-responsive">
-                                                            <table class="table table-hover">
+                                                            <table class="tbl-typical table-hover table-box-typical text-center">
                                                                 <thead>
                                                                     <tr>
-                                                                        <th>Data início</th>
-                                                                        <th>Data fim</th>
-                                                                        <th>Situação</th>
-                                                                        <th>Valor</th>
-                                                                        <th>Observações</th>
-                                                                        <th class="text-right">Ações</th>
+                                                                        <th class="text-center">
+                                                                            <div>Data início</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Data fim</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Situação</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Valor</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Observações</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Ações</div>
+                                                                        </th>
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
@@ -698,26 +710,28 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="row mt-md">
-                                                            <div class="col-xs-12 mb-sm">
-                                                                <strong>
-                                                                    <small>Legenda da tabela</small>
-                                                                </strong>
-                                                            </div>
-                                                            <div class="col-sm-4 text-center">
-                                                                <small>
-                                                                    <i class="fa fa-circle-thin mr-xs" aria-hidden="true"></i> Próximo valor vigente
-                                                                </small>
-                                                            </div>
-                                                            <div class="col-sm-4 text-center">
-                                                                <small>
-                                                                    <i class="fa fa-circle mr-xs text-success" aria-hidden="true"></i> Valor vigente
-                                                                </small>
-                                                            </div>
-                                                            <div class="col-sm-4 text-center">
-                                                                <small>
-                                                                    <i class="fa fa-circle mr-xs text-light-grey" aria-hidden="true"></i> Valor inativo
-                                                                </small>
+                                                        <div class="p-a">
+                                                            <div class="row">
+                                                                <div class="col-xs-12 mb-sm">
+                                                                    <strong>
+                                                                        <small>Legenda da tabela</small>
+                                                                    </strong>
+                                                                </div>
+                                                                <div class="col-sm-4 text-center">
+                                                                    <small>
+                                                                        <i class="fa fa-circle-thin mr-xs" aria-hidden="true"></i> Próximo valor vigente
+                                                                    </small>
+                                                                </div>
+                                                                <div class="col-sm-4 text-center">
+                                                                    <small>
+                                                                        <i class="fa fa-circle mr-xs text-success" aria-hidden="true"></i> Valor vigente
+                                                                    </small>
+                                                                </div>
+                                                                <div class="col-sm-4 text-center">
+                                                                    <small>
+                                                                        <i class="fa fa-circle mr-xs text-light-grey" aria-hidden="true"></i> Valor inativo
+                                                                    </small>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -790,7 +804,7 @@
                                     <div class="col-md-3">
                                         <label class="form-label semibold">Valor</label>
                                         <p class="text-warning">
-                                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i> Pendente</strong>
+                                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i><strong> Pendente</strong>
                                         </p>
                                     </div>
                                     <div class="col-md-3">
@@ -816,18 +830,28 @@
                             <header class="card-header">
                                 <h5 class="semibold"><i class="fa fa-money mr-xs" aria-hidden="true"></i> Valores</h5>
                             </header>
-                            <div class="card-block">
+                            <div class="p-0">
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="table-responsive">
-                                            <table class="table table-hover">
+                                            <table class="tbl-typical table-hover table-box-typical text-center">
                                                 <thead>
                                                     <tr>
-                                                        <th>Data início</th>
-                                                        <th>Data fim</th>
-                                                        <th>Situação</th>
-                                                        <th>Valor</th>
-                                                        <th>Observações</th>
+                                                        <th class="text-center">
+                                                            <div>Data início</div>
+                                                        </th>
+                                                        <th class="text-center">
+                                                            <div>Data fim</div>
+                                                        </th>
+                                                        <th class="text-center">
+                                                            <div>Situação</div>
+                                                        </th>
+                                                        <th class="text-center">
+                                                            <div>Valor</div>
+                                                        </th>
+                                                        <th class="text-center">
+                                                            <div>Observações</div>
+                                                        </th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -863,26 +887,28 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row mt-md">
-                                    <div class="col-xs-12 mb-sm">
-                                        <strong>
-                                            <small>Legenda da tabela</small>
-                                        </strong>
-                                    </div>
-                                    <div class="col-sm-4 text-center">
-                                        <small>
-                                            <i class="fa fa-circle-thin mr-xs" aria-hidden="true"></i> Próximo valor vigente
-                                        </small>
-                                    </div>
-                                    <div class="col-sm-4 text-center">
-                                        <small>
-                                            <i class="fa fa-circle mr-xs text-success" aria-hidden="true"></i> Valor vigente
-                                        </small>
-                                    </div>
-                                    <div class="col-sm-4 text-center">
-                                        <small>
-                                            <i class="fa fa-circle mr-xs text-light-grey" aria-hidden="true"></i> Valor inativo
-                                        </small>
+                                <div class="p-a">
+                                    <div class="row">
+                                        <div class="col-xs-12 mb-sm">
+                                            <strong>
+                                                <small>Legenda da tabela</small>
+                                            </strong>
+                                        </div>
+                                        <div class="col-sm-4 text-center">
+                                            <small>
+                                                <i class="fa fa-circle-thin mr-xs" aria-hidden="true"></i> Próximo valor vigente
+                                            </small>
+                                        </div>
+                                        <div class="col-sm-4 text-center">
+                                            <small>
+                                                <i class="fa fa-circle mr-xs text-success" aria-hidden="true"></i> Valor vigente
+                                            </small>
+                                        </div>
+                                        <div class="col-sm-4 text-center">
+                                            <small>
+                                                <i class="fa fa-circle mr-xs text-light-grey" aria-hidden="true"></i> Valor inativo
+                                            </small>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -989,6 +1015,7 @@
 
                     </div>
                     <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary-outline" data-dismiss="modal"><i class="fa fa-pencil-square-o mr-xs" aria-hidden="true"></i>Editar</button>
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
                     </div>
                 </div>
@@ -1044,7 +1071,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+                        <button type="button" class="btn btn-primary ml-md" data-dismiss="modal">Ok</button>
                     </div>
                 </div>
             </div>
