Ajustes nos botões

--- a/pages/academico/niveis--editar.html
+++ b/pages/academico/niveis--editar.html
@@ -481,7 +481,7 @@
                                     <table class="datatable-on table table-hover">
                                         <thead>
                                             <tr>
-                                                <th>
+                                                <th width="20px">
                                                 </th>
                                                 <th>Material didático</th>
                                             </tr>
