--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -973,8 +973,8 @@
                                                                                 <img src="../../img/cursos/junior/junior-001.jpg" class="img-circle-xs"> Teens 1: Time Zones 1A - (Combo Split) + Activity Pack Teens 1 – Cengage Learning
                                                                             </p></td>
                                                                             <td class="text-right">
-                                                                                <button type="button" class="btn btn-inline btn-danger-outline btn-xs" data-toggle="tooltip" data-placement="top" title="remover">
-                                                                                    <i class="fa fa-times mr-xs" aria-hidden="true"></i>
+                                                                                <button type="button" class="btn btn-clear btn-xs" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                                    <i class="fa fa-times mr-xs text-danger" aria-hidden="true"></i>
                                                                                 </button>
                                                                             </td>
                                                                         </tr>
@@ -983,8 +983,8 @@
                                                                                 <img src="../../img/cursos/kids/hooray-a1.jpg" class="img-circle-xs"> Hooray! A – Student’s Book – Helbling Languages
                                                                             </p></td>
                                                                             <td class="text-right">
-                                                                                <button type="button" class="btn btn-inline btn-danger-outline btn-xs" data-toggle="tooltip" data-placement="top" title="remover">
-                                                                                    <i class="fa fa-times mr-xs" aria-hidden="true"></i>
+                                                                                <button type="button" class="btn btn-clear btn-xs" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                                    <i class="fa fa-times mr-xs text-danger" aria-hidden="true"></i>
                                                                                 </button>
                                                                             </td>
                                                                         </tr>
@@ -1121,7 +1121,7 @@
                                     <table class="datatable-on table table-hover">
                                         <thead>
                                             <tr>
-                                                <th>
+                                                <th width="20px">
                                                 </th>
                                                 <th>Material didático</th>
                                             </tr>
