--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -931,8 +931,8 @@
                                                             (00) 00000000
                                                         </td>
                                                         <td class="text-center">
-                                                            <button type="button" class="btn btn-sm btn-circle btn-inline btn-danger-outline" data-toggle="tooltip" data-placement="top" title="remover">
-                                                                <i class="fa fa-times mr-xs" aria-hidden="true"></i>
+                                                            <button type="button" class="btn btn-clear btn-xs" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                <i class="fa fa-times mr-xs text-danger" aria-hidden="true"></i>
                                                             </button>
                                                         </td>
                                                     </tr>
