--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -455,8 +455,8 @@
                                                                             (00) 00000000
                                                                         </td>
                                                                         <td class="text-center">
-                                                                            <button type="button" class="btn btn-inline btn-danger-outline btn-sm" data-toggle="tooltip" data-placement="top" title="remover">
-                                                                                <i class="fa fa-times mr-xs" aria-hidden="true"></i>
+                                                                            <button type="button" class="btn btn-clear btn-xs" data-toggle="tooltip" data-placement="top" title="remover">
+                                                                                <i class="fa fa-times mr-xs text-danger" aria-hidden="true"></i>
                                                                             </button>
                                                                         </td>
                                                                     </tr>
