Ajustes em editar curso - tabela de valor

--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -381,17 +381,29 @@
                                                             </div>
                                                         </div>
                                                     </header>
-                                                    <div class="card-block">
+                                                    <div class="p-0">
                                                         <div class="table-responsive">
-                                                            <table class="table table-hover">
+                                                            <table class="tbl-typical table-hover table-box-typical text-center">
                                                                 <thead>
                                                                     <tr>
-                                                                        <th>Data início</th>
-                                                                        <th>Data fim</th>
-                                                                        <th>Situação</th>
-                                                                        <th>Valor</th>
-                                                                        <th>Observações</th>
-                                                                        <th class="text-right">Ações</th>
+                                                                        <th class="text-center">
+                                                                            <div>Data início</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Data fim</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Situação</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Valor</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Observações</div>
+                                                                        </th>
+                                                                        <th class="text-center">
+                                                                            <div>Ações</div>
+                                                                        </th>
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
@@ -448,26 +460,28 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="row mt-md">
-                                                            <div class="col-xs-12 mb-sm">
-                                                                <strong>
-                                                                    <small>Legenda da tabela</small>
-                                                                </strong>
-                                                            </div>
-                                                            <div class="col-sm-4 text-center">
-                                                                <small>
-                                                                    <i class="fa fa-circle-thin mr-xs" aria-hidden="true"></i> Próximo valor vigente
-                                                                </small>
-                                                            </div>
-                                                            <div class="col-sm-4 text-center">
-                                                                <small>
-                                                                    <i class="fa fa-circle mr-xs text-success" aria-hidden="true"></i> Valor vigente
-                                                                </small>
-                                                            </div>
-                                                            <div class="col-sm-4 text-center">
-                                                                <small>
-                                                                    <i class="fa fa-circle mr-xs text-light-grey" aria-hidden="true"></i> Valor inativo
-                                                                </small>
+                                                        <div class="p-a">
+                                                            <div class="row">
+                                                                <div class="col-xs-12 mb-sm">
+                                                                    <strong>
+                                                                        <small>Legenda da tabela</small>
+                                                                    </strong>
+                                                                </div>
+                                                                <div class="col-sm-4 text-center">
+                                                                    <small>
+                                                                        <i class="fa fa-circle-thin mr-xs" aria-hidden="true"></i> Próximo valor vigente
+                                                                    </small>
+                                                                </div>
+                                                                <div class="col-sm-4 text-center">
+                                                                    <small>
+                                                                        <i class="fa fa-circle mr-xs text-success" aria-hidden="true"></i> Valor vigente
+                                                                    </small>
+                                                                </div>
+                                                                <div class="col-sm-4 text-center">
+                                                                    <small>
+                                                                        <i class="fa fa-circle mr-xs text-light-grey" aria-hidden="true"></i> Valor inativo
+                                                                    </small>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
