Ajustes nos checkboxes da seleção de materiais didáticos

--- a/pages/academico/niveis--editar.html
+++ b/pages/academico/niveis--editar.html
@@ -478,36 +478,35 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="table-responsive mt-md">
-                                    <table class="datatable-on table table-hover">
+                                    <table class="datatable-on table table-hover width-grid-auto" width="100%">
                                         <thead>
                                             <tr>
-                                                <th width="20px">
-                                                </th>
+                                                <th class="hidden-iten"></th>
                                                 <th>Material didático</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr>
+                                                <td class="hidden-iten"></td>
                                                 <td>
-                                                    <div class="checkbox-bird ml-lg">
+                                                    <div class="checkbox-bird mt-sm">
                                                         <input type="checkbox" id="check-modal-02"/>
-                                                        <label for="check-modal-02"></label>
+                                                        <label for="check-modal-02">
+                                                            <img src="../../img/cursos/junior/junior-001.jpg" class="img-circle-xs"> Teens 1: Time Zones 1A - (Combo Split) + Activity Pack Teens 1 – Cengage Learning
+                                                        </label>
                                                     </div>
                                                 </td>
-                                                <td><p>
-                                                    <img src="../../img/cursos/junior/junior-001.jpg" class="img-circle-xs"> Teens 1: Time Zones 1A - (Combo Split) + Activity Pack Teens 1 – Cengage Learning
-                                                </p></td>
                                             </tr>
                                             <tr>
+                                                <td class="hidden-iten"></td>
                                                 <td>
-                                                    <div class="checkbox-bird ml-lg">
+                                                    <div class="checkbox-bird mt-sm">
                                                         <input type="checkbox" id="check-modal-03"/>
-                                                        <label for="check-modal-03"></label>
+                                                        <label for="check-modal-03">
+                                                            <img src="../../img/cursos/kids/hooray-a1.jpg" class="img-circle-xs"> Hooray! A – Student’s Book – Helbling Languages
+                                                        </label>
                                                     </div>
                                                 </td>
-                                                <td><p>
-                                                    <img src="../../img/cursos/kids/hooray-a1.jpg" class="img-circle-xs"> Hooray! A – Student’s Book – Helbling Languages
-                                                </p></td>
                                             </tr>
                                         </tbody>
                                     </table>
