Ajustes em cursos: idade máxima

--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -320,15 +320,19 @@
                                             </div>
                                         </div>
                                         <div class="row divider-top">
-                                            <div class="col-sm-4">
+                                            <div class="col-sm-3">
                                                 <label class="form-label semibold" for="">Idade mínima</label>
                                                 <input type="text" class="form-control" id="idade-minima" placeholder="Idade">
                                             </div>
-                                            <div class="col-sm-4">
+                                            <div class="col-sm-3">
+                                                <label class="form-label semibold" for="">Idade máxima</label>
+                                                <input type="text" class="form-control" id="idade-maxima" placeholder="Idade">
+                                            </div>
+                                            <div class="col-sm-3">
                                                 <label class="form-label semibold" for="">Escolaridade</label>
                                                 <input type="text" class="form-control" id="" placeholder="Escolaridade">
                                             </div>
-                                            <div class="col-sm-4">
+                                            <div class="col-sm-3">
                                                 <div class="checkbox-toggle mt-md pt-sm">
                                                     <input type="checkbox" id="check-qtd-niveis" checked/>
                                                     <label class="form-label" for="check-qtd-niveis">Multinível</label>
